[project]
name = "densi-t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "census>=0.8.22",
    "geopandas>=1.0",
    "pandas>=2.0",
    "pygris>=0.1.6",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "pip-system-certs>=5.3",
    "tobler>=0.14.0",
    "streamlit>=1.40",
    "plotly>=5.24",
    "statsmodels>=0.14",
]
